feat: SwapController change returns
