# src/main/kotlin/com/posadeus/fantatennis/controller/TeamApi.kt
@@ -1,5 +1,5 @@
 /**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.12.0).
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.15.0).
  * https://openapi-generator.tech
  * Do not edit the class manually.
 */
@@ -42,8 +42,7 @@ interface TeamApi {
     @RequestMapping(
             method = [RequestMethod.POST],
             value = ["/team/{teamId}/players/swap"],
-            produces = ["application/json"],
             consumes = ["application/json"]
     )
-    fun swap(@PathVariable("teamId") teamId: Int, @RequestBody playersToSwapDto: PlayersToSwapDto): ResponseEntity<TeamDto>
+    fun swap( @PathVariable("teamId") teamId: Int, @RequestBody playersToSwapDto: PlayersToSwapDto): ResponseEntity<Unit>
 }
